<resources>
    <!--  Main Menu  -->
    <string name="app_name">Quizza</string>
    <string name="play">Play</string>
    <string name="stats">Stats</string>
    <string name="options">Options</string>
    <string name="exit">Exit</string>
    <string name="help">\?</string>

    <!--  Settings  -->
    <string name="sound_effects">Sound Effects</string>
    <string name="background_music">Background Music</string>
    <string name="audio_settings">Audio Settings</string>
    <string name="email">name@email.com</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out</string>

    <!--  How to Play  -->
    <string name="how_to_play">How to play?</string>
    <string name="instructions">Quizza is a time-based trivia game. Within 60 seconds, you must answer as many questions correctly as possible by tapping on the option you think is correct.\n\nEach correct answer will award you a point. If you get the answer wrong, you will get no points and the question will be skipped.\n\nGot it? Then let’s play! :D</string>

    <!--  Score  -->
    <string name="score_placeholder">28</string>
    <string name="score">SCORE</string>
    <string name="play_again">Play Again</string>
    <string name="share">Share Results</string>
    <string name="main_menu">Main Menu</string>

    <!--  Play  -->
    <string name="start">START!</string>
    <string name="timer">180</string>
    <string name="game_score">0</string>
    <string name="score_text">Score:</string>
    <string name="game_time">60</string>
    <string name="time_text">Time:</string>
    <string name="time_up">TIME\'S\n UP</string>

    <!--  image descriptions  -->
    <string name="pizza_desc">pizza icon from flaticon</string>
    <string name="mushroom_desc">mushroom icon from flaticon</string>
    <string name="tomato_desc">tomato icon from flaticon</string>
    <string name="bell_pepper_desc">bell pepper icon from flaticon</string>
    <string name="onion_desc">onion icon from flaticon</string>
    <string name="garlic_desc">garlic icon from flaticon</string>
    <string name="cheese_desc">cheese icon from flaticon</string>
    <string name="pepperoni_desc">pepperoni icon from flaticon</string>

    <!--  Account  -->
    <string name="yellow_wave_desc">yellow wave as background</string>
    <string name="sign_in">Sign in to\nplay</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_to_register">No account yet? Register here!</string>

    <string name="red_wave_desc">red wave as background</string>
    <string name="create_account">Create an\naccount</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_to_login">Already have an account?</string>
    <string name="email_address">Email</string>
    <string name="games_played">Games Played:</string>
    <string name="average_score">Average Score:</string>
    <string name="quizza_stats">Quizza Stats</string>

</resources>