<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity"
    android:background="@color/yellow">

    <ImageView
        android:id="@+id/iv_mushroom"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/mushroom"
        android:contentDescription="@string/mushroom_desc"
        tools:ignore="MissingConstraints"
         />

    <ImageView
        android:id="@+id/iv_tomato"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/tomato"
        android:contentDescription="@string/tomato_desc"
        tools:ignore="MissingConstraints"
        />

    <ImageView
        android:id="@+id/iv_bell_pepper"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/bell_pepper"
        android:contentDescription="@string/bell_pepper_desc"
        tools:ignore="MissingConstraints"
        />

    <ImageView
        android:id="@+id/iv_onion"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/onion"
        android:contentDescription="@string/onion_desc"
        tools:ignore="MissingConstraints"
        />

    <ImageView
        android:id="@+id/iv_cheese"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/cheese"
        android:contentDescription="@string/cheese_desc"
        tools:ignore="MissingConstraints"
        />

    <ImageView
        android:id="@+id/iv_pepperoni"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/pepperoni"
        android:contentDescription="@string/pepperoni_desc"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/tv_app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:fontFamily="@font/just_me_again_down_here"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="60sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_play"
        android:text="@string/play"
        android:textSize="60sp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_stats"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/nunito"
        android:text="@string/stats"
        android:textColor="@color/white"
        android:textSize="35sp"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_play" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_options"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button"
        android:text="@string/options"
        android:textSize="30sp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_stats"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_exit"
        android:layout_width="200dp"
        android:layout_height="70dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/button"
        android:text="@string/exit"
        android:textSize="35sp"
        android:fontFamily="@font/nunito"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/btn_options"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_help"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/circle_button"
        android:text="@string/help"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>