<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_wave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/wave_yellow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/yellow_wave_desc" />

    <ImageView
        android:id="@+id/img_pizza"
        android:layout_width="256dp"
        android:layout_height="256dp"
        android:src="@drawable/pizza"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="-35dp"
        android:scaleX="-1"
        android:contentDescription="@string/pizza_desc" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:fontFamily="@font/nunito_regular"
        android:gravity="end"
        app:layout_constraintTop_toTopOf="@id/img_wave"
        app:layout_constraintLeft_toRightOf="@id/img_pizza"
        android:layout_marginTop="50dp"
        />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintTop_toBottomOf="@id/img_wave"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginStart="25dp"
        android:labelFor="@id/et_email"
        />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/tv_email"
        android:layout_marginHorizontal="25dp"
        />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="18sp"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:labelFor="@id/et_password"
        />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"
        android:autofillHints="password"
        android:inputType="textPassword"
        android:layout_marginHorizontal="25dp"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_login"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:background="@drawable/button_login"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/nunito_regular"
        android:padding="0dp"
        app:layout_constraintBottom_toTopOf="@id/tv_to_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/tv_to_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_register"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="25dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>