<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScoreActivity"
    android:background="@color/yellow">

    <TextView
        android:id="@+id/tv_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/score"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_score_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score_placeholder"
        android:textSize="150sp"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito_regular"
        app:layout_constraintTop_toBottomOf="@id/tv_score_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_play_again"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/button_play"
        android:text="@string/play_again"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:fontFamily="@font/nunito"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/tv_score_num"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_share"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_share"
        android:fontFamily="@font/nunito"
        android:text="@string/share"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_play_again" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_return"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:fontFamily="@font/nunito"
        android:text="@string/main_menu"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_share" />

</androidx.constraintlayout.widget.ConstraintLayout>