<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OptionsActivity">

    <TextView
        android:id="@+id/tv_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/profile"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="5dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_profile" />

    <TextView
        android:id="@+id/tv_audio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:text="@string/audio_settings"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email" />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:background="?android:attr/listDivider"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/tv_audio"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="PxUsage" />

    <TextView
        android:id="@+id/tv_bgm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/background_music"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_audio"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <TextView
        android:id="@+id/tv_sfx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="5dp"
        android:text="@string/sound_effects"
        android:textSize="17sp"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tv_bgm"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_bgm"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_bgm"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/Theme.Quizza"
        />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_sfx"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toTopOf="@id/tv_sfx"
        app:layout_constraintRight_toRightOf="parent"
        android:theme="@style/Theme.Quizza"
        />

    <TextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="70dp"
        android:text="@string/logout"
        android:textSize="17sp"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:clickable="true"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>